--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "handlebars": "^4.0.11",
     "handlebars-loader": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^3.11.0"
+    "style-loader": "^0.21.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -45,7 +44,10 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.0",
     "mocha": "^5.1.1",
+    "node-sass": "^4.9.3",
     "puppeteer": "^1.3.0",
+    "sass-loader": "^7.1.0",
+    "webpack": "^3.12.0",
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^2.11.2"
   }
